--- a/src/components/TagBadge/TagBadge.module.scss
+++ b/src/components/TagBadge/TagBadge.module.scss
@@ -5,7 +5,7 @@
   padding: 0.25rem 0.6rem;
   font-size: 0.72rem;
   font-weight: 500;
-  border: 2px solid;
+  // border: 2px solid;
   border-radius: 9999px;
   background-color: white;
   color: #1f2937;
