--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -5,4 +5,8 @@
 
 .main {
   margin: 0 auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
