--- a/src/features/Search/Search.module.scss
+++ b/src/features/Search/Search.module.scss
@@ -61,7 +61,9 @@
 
 .noResults {
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  min-height: fit-content;
 }
 
 .selectedTags {
