--- a/src/features/Search/Search.module.scss
+++ b/src/features/Search/Search.module.scss
@@ -98,11 +98,11 @@
 }
 
 .spinner {
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid #444;
+  border: 0.25rem solid #f3f3f3;
+  border-top: 0.25rem solid #444;
   border-radius: 50%;
-  width: 36px;
-  height: 36px;
+  width: 2.25rem;
+  height: 2.25rem;
   animation: spin 0.7s linear infinite;
   margin: 0 auto;
 }
