--- a/src/features/Search/Search.module.scss
+++ b/src/features/Search/Search.module.scss
@@ -96,3 +96,22 @@
   font-size: 1rem;
   margin-left: 0.2rem;
 }
+
+.spinner {
+  border: 0.25rem solid #f3f3f3;
+  border-top: 0.25rem solid #444;
+  border-radius: 50%;
+  width: 2.25rem;
+  height: 2.25rem;
+  animation: spin 0.7s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
