Added margins when the tag list is hidden

--- a/src/features/Search/Search.module.scss
+++ b/src/features/Search/Search.module.scss
@@ -59,6 +59,13 @@
   font-size: 0.72rem;
 }
 
+.space {
+  margin-bottom: 3rem;
+  @media (max-width: 600px) {
+    margin-bottom: 1rem;
+  }
+}
+
 .noResults {
   text-align: center;
   margin-top: 5rem;
